--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
+
 :root {
-    --white: #fff;
-    --light-grey: #f5f6f7;
-    --dark-grey: #0a0a23;
-    --yellow: #f1be32;
-    --golden-yellow: #feac32;
+    --white: white;
+    --light-grey: gold;
+    --dark-grey: rgb(0, 0, 0);
+    --yellow: gold;
+    --golden-yellow: yellow;
   }
   
   *,
@@ -25,9 +26,14 @@
     align-items: center;
   }
   
+
+
   h1 {
-    color: var(--light-grey);
+    color: var(--golden-yellow);
     margin: 20px 0 40px 0;
+    font-family: 'Roboto', sans-serif;
+    line-height: 100%;
+    
   }
   
   .todo-app {
@@ -46,16 +52,22 @@
   .btn {
     cursor: pointer;
     width: 100px;
+    height: 60px;
     margin: 10px;
     color: var(--dark-grey);
     background-color: var(--golden-yellow);
-    background-image: linear-gradient(#fecc4c, #ffac33);
+    background-image: linear-gradient(var(--golden-yellow), var(--golden-yellow));
     border-color: var(--golden-yellow);
+    border-style: solid;
     border-width: 3px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 50px;
+    font-weight: 500;
+    border-radius: 7px;
   }
   
   .btn:hover {
-    background-image: linear-gradient(#ffcc4c, #f89808);
+    background-image: linear-gradient(var(--golden-yellow), var(--golden-yellow));
   }
   
   .large-btn {
@@ -119,6 +131,7 @@
     margin-bottom: 5px;
     font-size: 1.3rem;
     font-weight: bold;
+    font-family: 'Roboto', sans-serif;
   }
   
   #title-input,
@@ -127,8 +140,15 @@
     width: 100%;
     margin-bottom: 10px;
     padding: 2px;
+    border: 1px solid var(--golden-yellow);
   }
   
+  #title-input,
+  #date-input,
+  #description-input:focus {
+    outline: none;
+  }
+
   #confirm-close-dialog {
     padding: 10px;
     margin: 10px auto;
@@ -149,10 +169,14 @@
   #tasks-container {
     height: 100%;
     overflow-y: auto;
+    font-family: 'Roboto', sans-serif;
+    margin: 5px;
+    line-height: 1.5;
+    font-weight: 400;
   }
   
   .task {
-    margin: 5px 0;
+    margin: 15px 0;
   }
   
   .hidden {
